[gd_scene load_steps=14 format=2]

[ext_resource path="res://Objects/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Spring Snowstorm.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Fonts/coolvetica condensed rg.otf" type="DynamicFontData" id=4]
[ext_resource path="res://Objects/Tooltip/TooltipArea.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sprites/Icons/icon_key.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Icons/icon_money.png" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.113725, 0.113725, 0.113725, 0.619608 )
border_blend = true
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color( 1, 0.913725, 0.356863, 0.6 )
shadow_size = 3

[sub_resource type="DynamicFont" id=5]
size = 36
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.113725, 0.113725, 0.113725, 0.619608 )
border_blend = true
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color( 0, 0.862745, 0.356863, 0.6 )
shadow_size = 3

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.854902, 0.141176, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.854902, 0.611765, 0.611765, 1 )
border_color = Color( 0.207843, 0, 0.129412, 1 )

[sub_resource type="DynamicFont" id=3]
size = 50
use_filter = true
font_data = ExtResource( 3 )

[node name="Game" type="Node"]
script = ExtResource( 2 )

[node name="Screen" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="TwoPartDivision" type="HBoxContainer" parent="Screen"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/separation = 0

[node name="CharacterPart" type="Control" parent="Screen/TwoPartDivision"]
margin_right = 520.0
margin_bottom = 1000.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="ColorRect" type="ColorRect" parent="Screen/TwoPartDivision/CharacterPart"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.643137, 0.501961, 0.501961, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Keys" type="Panel" parent="Screen/TwoPartDivision/CharacterPart"]
margin_left = 10.0
margin_top = 18.0
margin_right = 98.0
margin_bottom = 52.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="KeyText" type="Label" parent="Screen/TwoPartDivision/CharacterPart/Keys"]
anchor_left = 0.778
anchor_top = 0.441
anchor_right = 0.778
anchor_bottom = 0.441
margin_left = -14.464
margin_top = -21.994
margin_right = 14.536
margin_bottom = 22.006
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 5 )
text = "12"
align = 1
valign = 1

[node name="KeyIcon" type="TextureRect" parent="Screen/TwoPartDivision/CharacterPart/Keys"]
anchor_left = 0.259
anchor_top = 0.464
anchor_right = 0.259
anchor_bottom = 0.464
margin_left = 20.208
margin_top = 45.224
margin_right = 89.208
margin_bottom = 114.224
rect_rotation = -159.95
texture = ExtResource( 6 )
expand = true

[node name="Money" type="Panel" parent="Screen/TwoPartDivision/CharacterPart"]
margin_left = 353.0
margin_top = 16.0
margin_right = 537.0
margin_bottom = 65.0
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="MoneyText" type="Label" parent="Screen/TwoPartDivision/CharacterPart/Money"]
anchor_left = 0.778
anchor_top = 0.441
anchor_right = 0.778
anchor_bottom = 0.441
margin_left = -59.152
margin_top = -21.609
margin_right = 32.848
margin_bottom = 22.391
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 5 )
text = "123.46K"
align = 1
valign = 1

[node name="MoneyIcon" type="TextureRect" parent="Screen/TwoPartDivision/CharacterPart/Money"]
anchor_left = 0.259
anchor_top = 0.464
anchor_right = 0.259
anchor_bottom = 0.464
margin_left = -39.656
margin_top = -69.736
margin_right = 78.344
margin_bottom = 48.264
rect_rotation = 17.8182
texture = ExtResource( 7 )
expand = true

[node name="AffectionBar" type="ProgressBar" parent="Screen/TwoPartDivision/CharacterPart"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 21.0
margin_top = -15.0
margin_right = 266.0
margin_bottom = 4.0
rect_rotation = -89.9999
mouse_filter = 2
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 50.0
percent_visible = false

[node name="AffectionText" type="Label" parent="Screen/TwoPartDivision/CharacterPart/AffectionBar"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 58.0001
margin_top = 7.99988
margin_right = 128.0
margin_bottom = 62.9999
rect_rotation = 89.9999
custom_fonts/font = SubResource( 3 )
text = "50%"

[node name="Character" parent="Screen/TwoPartDivision" instance=ExtResource( 1 )]
margin_left = 520.0
margin_right = 1020.0
margin_bottom = 1000.0
expand = false

[node name="ShopPart" type="Control" parent="Screen/TwoPartDivision"]
margin_left = 1020.0
margin_right = 1280.0
margin_bottom = 1000.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="ColorRect" type="ColorRect" parent="Screen/TwoPartDivision/ShopPart"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.537255, 0.611765, 0.623529, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Tooltips" type="Control" parent="Screen"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="AffectionTooltip" parent="Screen/Tooltips" instance=ExtResource( 5 )]
margin_left = 21.0
margin_top = 459.0
margin_right = 40.0
margin_bottom = 706.0
tooltip_text = "This is the characters affection meter. 
Fill it up to get special events!"

[node name="MoneyTooltip" parent="Screen/Tooltips" instance=ExtResource( 5 )]
margin_left = 350.0
margin_top = 13.0
margin_right = 539.0
margin_bottom = 67.0
tooltip_text = "This is your current money.
Use it to buy new characters, or upgrade existing ones"

[node name="KeyTooltip" parent="Screen/Tooltips" instance=ExtResource( 5 )]
margin_left = 10.0
margin_top = 18.0
margin_right = 99.0
margin_bottom = 53.0
tooltip_text = "This is you currently avalible keys.
Use it to unlock other characters."
